--- a/app/src/main/res/layout/post_layout.xml
+++ b/app/src/main/res/layout/post_layout.xml
@@ -31,7 +31,7 @@
         android:textColor="@android:color/black"
         android:textStyle="bold"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintLeft_toRightOf="@+id/imageView"
+        app:layout_constraintLeft_toRightOf="@+id/ups_image_view"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="RtlHardcoded"
@@ -75,7 +75,7 @@
         tools:text="Comments" />
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/ups_image_view"
         android:layout_width="16dp"
         android:layout_height="16dp"
         android:layout_marginLeft="2dp"
