--- a/app/src/main/res/layout/detail_fragment_layout.xml
+++ b/app/src/main/res/layout/detail_fragment_layout.xml
@@ -10,7 +10,7 @@
         android:layout_height="wrap_content">
 
         <android.support.design.widget.TabLayout
-            android:id="@+id/tabs"
+            android:id="@+id/details_tabs_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
@@ -28,10 +28,28 @@
         </android.support.design.widget.TabLayout>
     </android.support.design.widget.AppBarLayout>
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center_vertical">
+
+        <TextView
+            android:id="@+id/no_post_selected_text_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:padding="8dp"
+            android:text="@string/no_post_selected"
+            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
+            android:textSize="18sp"
+            android:textStyle="italic" />
+    </RelativeLayout>
+
     <android.support.v4.view.ViewPager
-        android:id="@+id/view_pager"
+        android:id="@+id/details_view_pager"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
     </android.support.v4.view.ViewPager>
+
 </android.support.design.widget.CoordinatorLayout>
