--- a/app/src/main/res/layout/post_layout.xml
+++ b/app/src/main/res/layout/post_layout.xml
@@ -43,10 +43,14 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="0dp"
-        android:layout_marginTop="4dp"
+        android:layout_marginTop="3dp"
         app:layout_constraintLeft_toLeftOf="@+id/title_text_view"
         app:layout_constraintTop_toBottomOf="@+id/title_text_view"
-        tools:text="Username" />
+        tools:text="Username"
+        app:layout_constraintRight_toLeftOf="@+id/comments_text_view"
+        android:layout_marginLeft="0dp"
+        android:layout_marginRight="8dp"
+        app:layout_constraintHorizontal_bias="0.0" />
 
     <TextView
         android:id="@+id/link_text_view"
