--- a/app/src/main/res/layout/post_layout.xml
+++ b/app/src/main/res/layout/post_layout.xml
@@ -47,10 +47,7 @@
         app:layout_constraintLeft_toLeftOf="@+id/title_text_view"
         app:layout_constraintTop_toBottomOf="@+id/title_text_view"
         tools:text="Username"
-        app:layout_constraintRight_toLeftOf="@+id/comments_text_view"
         android:layout_marginLeft="0dp"
-        android:layout_marginRight="8dp"
-        app:layout_constraintHorizontal_bias="0.0"
         tools:ignore="RtlHardcoded" />
 
     <TextView
@@ -76,10 +73,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
-        android:layout_marginTop="4dp"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/title_text_view"
-        tools:text="Comments" />
+        tools:text="Comments"
+        app:layout_constraintLeft_toRightOf="@+id/user_name_text_view"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintBaseline_toBaselineOf="@+id/user_name_text_view" />
 
     <ImageView
         android:id="@+id/ups_image_view"
