--- a/app/src/main/res/layout/detail_fragment_layout.xml
+++ b/app/src/main/res/layout/detail_fragment_layout.xml
@@ -12,7 +12,8 @@
         <android.support.design.widget.TabLayout
             android:id="@+id/details_tabs_layout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
             <android.support.design.widget.TabItem
                 android:id="@+id/post_tab"
