--- a/app/src/main/res/layout/post_layout.xml
+++ b/app/src/main/res/layout/post_layout.xml
@@ -23,8 +23,10 @@
         android:id="@+id/title_text_view"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:ellipsize="end"
         android:maxLines="1"
@@ -41,51 +43,55 @@
         android:id="@+id/user_name_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="0dp"
-        android:layout_marginTop="3dp"
+        android:layout_marginLeft="0dp"
+        android:layout_marginTop="4dp"
+        android:ellipsize="end"
+        android:maxLength="6"
         app:layout_constraintLeft_toLeftOf="@+id/title_text_view"
         app:layout_constraintTop_toBottomOf="@+id/title_text_view"
-        tools:text="Username"
-        android:layout_marginLeft="0dp"
-        tools:ignore="RtlHardcoded" />
+        tools:ignore="MissingPrefix,RtlHardcoded"
+        tools:text="Username" />
 
     <TextView
         android:id="@+id/link_text_view"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginLeft="4dp"
+        android:layout_marginLeft="8dp"
         android:layout_marginTop="4dp"
         android:ellipsize="end"
         android:maxLines="1"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintLeft_toLeftOf="@+id/user_name_text_view"
+        app:layout_constraintLeft_toLeftOf="@+id/title_text_view"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/user_name_text_view"
+        app:layout_constraintVertical_bias="1.0"
         tools:ignore="RtlHardcoded"
-        tools:text="Link"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="8dp" />
+        tools:text="Link" />
 
     <TextView
         android:id="@+id/comments_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
-        app:layout_constraintRight_toRightOf="parent"
-        tools:text="Comments"
-        app:layout_constraintLeft_toRightOf="@+id/user_name_text_view"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="4dp"
         app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintBaseline_toBaselineOf="@+id/user_name_text_view" />
+        app:layout_constraintLeft_toRightOf="@+id/user_name_text_view"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/title_text_view"
+        tools:text="Comments" />
 
     <ImageView
         android:id="@+id/ups_image_view"
         android:layout_width="16dp"
         android:layout_height="16dp"
         android:layout_marginLeft="2dp"
+        android:layout_marginStart="2dp"
         android:layout_marginTop="8dp"
         android:contentDescription="@string/thumb_up"
         app:layout_constraintLeft_toRightOf="@+id/ups_text_view"
