--- a/app/src/main/res/layout-sw600dp/activity_main.xml
+++ b/app/src/main/res/layout-sw600dp/activity_main.xml
@@ -17,11 +17,24 @@
         android:layout_height="match_parent"
         android:orientation="horizontal">
 
+        <TextView
+            android:id="@+id/no_offline_data_text_view"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_weight="4"
+            android:padding="8dp"
+            android:text="@string/no_offline_data"
+            android:textAlignment="center"
+            android:textSize="18sp"
+            android:visibility="gone" />
+
         <android.support.v7.widget.RecyclerView
             android:id="@+id/posts_recycler_view"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_marginBottom="0dp"
+            android:scrollbars="vertical"
             android:layout_marginLeft="0dp"
             android:layout_marginRight="0dp"
             android:layout_marginTop="0dp"
