Done with share feature

--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -6,7 +6,17 @@
         android:id="@+id/refresh_post_list_menu"
         android:enabled="true"
         android:icon="@drawable/refresh_icon"
+        android:orderInCategory="100"
         android:title="@string/refresh_menu_text"
         android:visible="true"
-        app:showAsAction="always" />
+        app:showAsAction="ifRoom" />
+
+    <item
+        android:id="@+id/share_menu"
+        android:icon="@android:drawable/ic_menu_share"
+        android:orderInCategory="101"
+        android:title="@string/share_menu"
+        android:visible="false"
+        app:showAsAction="ifRoom" />
+
 </menu>
