--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -4,39 +4,45 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <android.support.design.widget.AppBarLayout
-        android:id="@+id/appbar"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
-        <include
-            android:id="@+id/detail_toolbar"
-            layout="@layout/toolbar" />
-
-        <android.support.design.widget.TabLayout
-            android:id="@+id/appbar_parent_tab"
+        <android.support.design.widget.AppBarLayout
+            android:id="@+id/appbar"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+            android:layout_height="wrap_content">
 
-            <android.support.design.widget.TabItem
-                android:id="@+id/post_tab"
-                android:layout_width="wrap_content"
+            <include
+                android:id="@+id/detail_toolbar"
+                layout="@layout/toolbar" />
+
+            <android.support.design.widget.TabLayout
+                android:id="@+id/appbar_parent_tab"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/post_tab_text" />
+                app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
-            <android.support.design.widget.TabItem
-                android:id="@+id/comments_tab"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/comments_tab" />
-        </android.support.design.widget.TabLayout>
-    </android.support.design.widget.AppBarLayout>
+                <android.support.design.widget.TabItem
+                    android:id="@+id/post_tab"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/post_tab_text" />
 
-    <android.support.v4.view.ViewPager
-        android:id="@+id/view_pager"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+                <android.support.design.widget.TabItem
+                    android:id="@+id/comments_tab"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/comments_tab" />
+            </android.support.design.widget.TabLayout>
+        </android.support.design.widget.AppBarLayout>
 
-    </android.support.v4.view.ViewPager>
+        <android.support.v4.view.ViewPager
+            android:id="@+id/view_pager"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+        </android.support.v4.view.ViewPager>
+    </LinearLayout>
 </android.support.design.widget.CoordinatorLayout>
