--- a/app/src/main/res/layout/detail_fragment_layout.xml
+++ b/app/src/main/res/layout/detail_fragment_layout.xml
@@ -4,53 +4,57 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <android.support.design.widget.AppBarLayout
-        android:id="@+id/appbar"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
-        <android.support.design.widget.TabLayout
-            android:id="@+id/details_tabs_layout"
+        <android.support.design.widget.AppBarLayout
+            android:id="@+id/appbar"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+            android:layout_height="wrap_content">
 
-            <android.support.design.widget.TabItem
-                android:id="@+id/post_tab"
-                android:layout_width="wrap_content"
+            <android.support.design.widget.TabLayout
+                android:id="@+id/details_tabs_layout"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/post_tab_text" />
+                app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
-            <android.support.design.widget.TabItem
-                android:id="@+id/comments_tab"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/comments_tab" />
-        </android.support.design.widget.TabLayout>
-    </android.support.design.widget.AppBarLayout>
+                <android.support.design.widget.TabItem
+                    android:id="@+id/post_tab"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/post_tab_text" />
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center_vertical">
+                <android.support.design.widget.TabItem
+                    android:id="@+id/comments_tab"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/comments_tab" />
+            </android.support.design.widget.TabLayout>
+        </android.support.design.widget.AppBarLayout>
 
-        <TextView
-            android:id="@+id/no_post_selected_text_view"
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:padding="8dp"
-            android:text="@string/no_post_selected"
-            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
-            android:textSize="18sp"
-            android:textStyle="italic" />
-    </RelativeLayout>
+            android:layout_height="match_parent"
+            android:gravity="center_vertical">
 
-    <android.support.v4.view.ViewPager
-        android:id="@+id/details_view_pager"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+            <TextView
+                android:id="@+id/no_post_selected_text_view"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:gravity="center"
+                android:padding="8dp"
+                android:text="@string/no_post_selected"
+                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
+                android:textSize="18sp"
+                android:textStyle="italic" />
 
-    </android.support.v4.view.ViewPager>
-
+            <android.support.v4.view.ViewPager
+                android:id="@+id/details_view_pager"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+        </RelativeLayout>
+    </LinearLayout>
 </android.support.design.widget.CoordinatorLayout>
