--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -6,6 +6,10 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <include
+            android:id="@+id/detail_toolbar"
+            layout="@layout/toolbar" />
+
         <FrameLayout
             android:id="@+id/detail_fragment_container"
             android:layout_width="0dp"
@@ -17,54 +21,10 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.0"
+            app:layout_constraintTop_toBottomOf="@+id/detail_toolbar"
             tools:layout_constraintBottom_creator="1"
             tools:layout_constraintLeft_creator="1"
             tools:layout_constraintRight_creator="1"
             tools:layout_constraintTop_creator="1" />
-
-
-        <!--<LinearLayout-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:orientation="vertical">-->
-
-        <!--<android.support.design.widget.AppBarLayout-->
-        <!--android:id="@+id/appbar"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content">-->
-
-        <!--<include-->
-        <!--android:id="@+id/detail_toolbar"-->
-        <!--layout="@layout/toolbar" />-->
-
-        <!--<android.support.design.widget.TabLayout-->
-        <!--android:id="@+id/appbar_parent_tab"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">-->
-
-        <!--<android.support.design.widget.TabItem-->
-        <!--android:id="@+id/post_tab"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:text="@string/post_tab_text" />-->
-
-        <!--<android.support.design.widget.TabItem-->
-        <!--android:id="@+id/comments_tab"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:text="@string/comments_tab" />-->
-        <!--</android.support.design.widget.TabLayout>-->
-        <!--</android.support.design.widget.AppBarLayout>-->
-
-        <!--<android.support.v4.view.ViewPager-->
-        <!--android:id="@+id/view_pager"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="match_parent">-->
-
-        <!--</android.support.v4.view.ViewPager>-->
-        <!--</LinearLayout>-->
     </android.support.constraint.ConstraintLayout>
 </layout>
