Refactor MVP pattern

--- a/app/src/main/res/layout/post_layout.xml
+++ b/app/src/main/res/layout/post_layout.xml
@@ -18,6 +18,8 @@
         android:clickable="true"
         android:focusable="true">
 
+        <!--android:onClick="@{(adapterPosition) -> postTappedHandler.onPostClick(adapterPosition)}">-->
+
 
         <TextView
             android:id="@+id/ups_text_view"
